Añade datos personales a la memoria #3

--- a/doc/prefacios/prefacio.tex
+++ b/doc/prefacios/prefacio.tex
@@ -1,10 +1,10 @@
 \thispagestyle{empty}
 
 \begin{center}
-{\large\bfseries Título \\ Subtítulo }\\
+{\large\bfseries Heráldica para todas \\ Subtítulo }\\
 \end{center}
 \begin{center}
-Nombre Del Estudiante\\
+Lucía González Sánchez\\
 \end{center}
 
 %\vspace{0.7cm}
@@ -19,10 +19,7 @@ Nombre Del Estudiante\\
 \cleardoublepage
 
 \begin{center}
-	{\large\bfseries Same, but in English}\\
-\end{center}
-\begin{center}
-	Student's name\\
+	Lucía González Sánchez\\
 \end{center}
 \vspace{0.5cm}
 \noindent\textbf{Keywords}: \textit{open source}, \textit{floss}
