--- a/doc/portada/portada.tex
+++ b/doc/portada/portada.tex
@@ -12,7 +12,7 @@
 \textsc{ \Large TRABAJO FIN DE GRADO\\[0.2cm]}
 \textsc{ GRADO EN INGENIERIA INFORMATICA}\\[1cm]
 
-{\Huge\bfseries Título \\}
+{\Huge\bfseries Heráldica para todas \\}
 \noindent\rule[-1ex]{\textwidth}{3pt}\\[3.5ex]
 {\large\bfseries Subtítulo }
 \end{minipage}
@@ -22,11 +22,11 @@
 \begin{minipage}{\textwidth}
 \centering
 
-\textbf{Autor}\\ {Estudiante}\\[2.5ex]
-\textbf{Director}\\ {Tutor(a)(es)}\\[2cm]
+\textbf{Autor}\\ {Lucía González Sánchez}\\[2.5ex]
+\textbf{Director}\\ {Juan Julián Merelo Guervós}\\[2cm]
 \includegraphics[width=0.3\textwidth]{logos/etsiit_logo.png}\\[0.1cm]
 \textsc{Escuela Técnica Superior de Ingenierías Informática y de Telecomunicación}\\
 \textsc{---}\\
-Granada, Junio de 201x
+Granada, \today
 \end{minipage}
 \end{titlepage}
