Añade la introducción #6

--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -1,3 +1,37 @@
 \chapter{Introducción}
 
+Durante los siglos XI y XII, la evolución del equipo militar hizo prácticamente
+imposible reconocer la identidad de un caballero en el campo de batalla, ya que 
+cubrían todo su cuerpo y rostro. Para hacer más fácil esta labor de
+reconocimiento, comenzaron los caballeros a pintar sobre su escudo ciertas formas
+y figuras específicas con la finalidad de distinguirse en las contiendas. 
+
+Estas representaciones que comenzaron siendo personales, pasaron a ser transmitidas
+a los descendientes de los primeros poseedores, convirtiéndose en símbolos
+hereditarios y emblemas familiares. 
+
+Alrededor de los siglos XIV y XV, desembocado por la desaparición de las justas y 
+los torneos, los escudos pasan de ser meros distintivos de identidad a representar
+historias de alianza entre linajes y entidades más amplias como casas nobiliarias,
+reinos, ciudades y otros colectivos. En definitiva, pasan de ser un símbolo distintivo
+a adquirir un enfoque más artístico, que además de distinguir, sirven como una decoración
+de palacios y espacios públicos hecha para apreciarse más de cerca.
+
+En este contexto surge formalmente la heráldica, un sistema gráfico que regula el uso 
+de estos símbolos y que, etimológicamente, proviene de la palabra \textit{herald}, 
+traducida como 'anuncio' o 'llamada'. La heráldica se convierte así en una ciencia-arte
+que establece un lenguaje visual propio que permite expresar de manera gráfica el linaje
+y la posición de un individuo o colectivo dentro de un contexto social determinado.
+
+Actualmente, la heráldica sigue siendo un campo de estudio relevante en disciplinas
+como la historia y la historia del arte, pero presenta obstáculos que dificultan el 
+acceso y la comprensión a quien desea introducirse a ella. La falta de una completa
+digitalización y estandarización de esta disciplina, y la ausencia de tecnologías
+actuales que faciliten su estudio, resulta en barreras para su aprendizaje.
+
+Con la finalidad de hacer menos hostil el aprendizaje de esta ciencia-arte, este
+proyecto busca desarrollar una herramienta que modernice y agilice el aprendizaje
+de la heráldica, facilitando su comprensión y análisis, aspirando a ofrecer un 
+recurso accesible que contribuya a la preservación y divulgación de esta disciplina.
+
 Este proyecto es software libre, y está liberado con la licencia \cite{gplv3}.
