Añade fuentes a la bibliografía close #6

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -237,10 +237,28 @@
 	howpublished = {\url{http://blog.royalcyber.com/devops/new-level-of-automation-with-ansible/}}
 }
 
-@misc{,
-	author       = {}, 
-	title        = {},
-	howpublished = {\url{}}
+@book{messia1990,
+  author    = {Luis F. Messía de la Cerda y Pita},
+  title     = {Heráldica española: el diseño heráldico},
+  year      = {1990},
+  publisher = {Ediciones Aldaba},
+  address   = {Madrid, España}
+}
+
+@book{delgado2019,
+  author    = {Josu Imanol Delgado y Ugarte, Fernando Martínez Larrañaga},
+  title     = {Manual de heráldica: La ciencia del blasón},
+  year      = {2019},
+  publisher = {Editatum},
+  address   = {España}
+}
+
+@book{pierrerer1858,
+  author    = {Francisco Piferrer},
+  title     = {Tratado de heráldica y blasón},
+  year      = {1858},
+  publisher = {Madrid : El Libro de Oro},
+  address   = {Madrid, España}
 }
 
 @misc{,
@@ -261,7 +279,11 @@
 	howpublished = {\url{}}
 }
 
-
+@misc{,
+	author       = {}, 
+	title        = {},
+	howpublished = {\url{}}
+}
 
 
 
