--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -22,6 +22,7 @@ de estos símbolos y que, etimológicamente, proviene de la palabra \textit{hera
 traducida como 'anuncio' o 'llamada'. La heráldica se convierte así en una ciencia-arte
 que establece un lenguaje visual propio que permite expresar de manera gráfica el linaje
 y la posición de un individuo o colectivo dentro de un contexto social determinado.
+\cite{messia1990} \cite{delgado2019} \cite{pierrerer1858}.
 
 Actualmente, la heráldica sigue siendo un campo de estudio relevante en disciplinas
 como la historia y la historia del arte, pero presenta obstáculos que dificultan el 
