Reestructura la memoria para mejorar el hilo conductor close #10

--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -1,38 +1,49 @@
 \chapter{Introducción}
 
-Durante los siglos XI y XII, la evolución del equipo militar hizo prácticamente
-imposible reconocer la identidad de un caballero en el campo de batalla, ya que 
-cubrían todo su cuerpo y rostro. Para hacer más fácil esta labor de
-reconocimiento, comenzaron los caballeros a pintar sobre su escudo ciertas formas
-y figuras específicas con la finalidad de distinguirse en las contiendas. 
+La heráldica es un sistema de representación gráfica codificado que permite
+la representación visual de linajes, instituciones y territorios a través de
+escudos de armas. Existen ciertas reglas de diseño y composición, lo que establece
+un lenguaje visual propio con el fin de facilitar su identificación y lectura.
+Los elementos distintivos de los escudos heráldicos son:
+\begin{itemize}
+    \item El campo, el fondo sobre el que se disponen los elementos.
+    \item La boca, el perímetro que delimita al campo.
+    \item Las particiones, divisiones geométricas en el escudo.
+    \item Los esmaltes, metales, colores y forros, utilizados con reglas estrictas
+    de contraste.
+    \item Las figuras, que pueden ser naturales, artificiales o fantásticas.
+    \item Adornos exteriores, tales como yelmos, coronas, lambrequines o brisuras.
+    En la heráldica eclesiástica se usan timbres concretos como la tiara para el papa
+    o la mitra para los obispos.
+\end{itemize}
 
-Estas representaciones que comenzaron siendo personales, pasaron a ser transmitidas
-a los descendientes de los primeros poseedores, convirtiéndose en símbolos
-hereditarios y emblemas familiares. 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.9\textwidth]{figuras/escudo-papa-francisco.png}
+    \caption{Escudo de armas del papa Francisco.}
+\end{figure}
 
-Alrededor de los siglos XIV y XV, desembocado por la desaparición de las justas y 
-los torneos, los escudos pasan de ser meros distintivos de identidad a representar
-historias de alianza entre linajes y entidades más amplias como casas nobiliarias,
-reinos, ciudades y otros colectivos. En definitiva, pasan de ser un símbolo distintivo
-a adquirir un enfoque más artístico, que además de distinguir, sirven como una decoración
-de palacios y espacios públicos hecha para apreciarse más de cerca.
-
-En este contexto surge formalmente la heráldica, un sistema gráfico que regula el uso 
-de estos símbolos y que, etimológicamente, proviene de la palabra \textit{herald}, 
-traducida como 'anuncio' o 'llamada'. La heráldica se convierte así en una ciencia-arte
-que establece un lenguaje visual propio que permite expresar de manera gráfica el linaje
-y la posición de un individuo o colectivo dentro de un contexto social determinado.
-\cite{messia1990} \cite{delgado2019} \cite{pierrerer1858}.
+El desarrollo de esta considerada ciencia-arte, tiene sus raíces en la Europa medieval,
+cuando la equipación militar hizo que fuese imposible identificar a simple vista a un 
+caballero en combate, lo que los llevó a pintar símbolos en sus escudos. Con el tiempo,
+estos símbolos fueron adquiriendo carácter hereditario y evolucionando hacia un sistema
+de representación de linajes y alianzas. Paralelamente, en el siglo XIII surge la 
+heráldica eclesiástica, adaptando este lenguaje gráfico a la jerarquía y simbología
+de la Iglesia. Sobre los siglos XIV y XV, la heráldica se consolidó y comenzó a ser 
+empleada como decoración en la arquitectura y como seña de identidad de instituciones, 
+familias y territorios. \cite{messia1990,delgado2019,pierrerer1858}
 
 Actualmente, la heráldica sigue siendo un campo de estudio relevante en disciplinas
 como la historia y la historia del arte, pero presenta obstáculos que dificultan el 
 acceso y la comprensión a quien desea introducirse a ella. La falta de una completa
 digitalización y estandarización de esta disciplina, y la ausencia de tecnologías
-actuales que faciliten su estudio, resulta en barreras para su aprendizaje.
+actuales que faciliten su estudio, resulta en barreras para su aprendizaje, 
+aplicación académica y divulgación.
 
 Con la finalidad de hacer menos hostil el aprendizaje de esta ciencia-arte, este
 proyecto busca desarrollar una herramienta que modernice y agilice el aprendizaje
 de la heráldica, facilitando su comprensión y análisis, aspirando a ofrecer un 
-recurso accesible que contribuya a la preservación y divulgación de esta disciplina.
+recurso digital accesible que contribuya a la preservación y divulgación de esta 
+disciplina.
 
 Este proyecto es software libre, y está liberado con la licencia \cite{gplv3}.
