--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -54,7 +54,7 @@ proyecto, se presentan los siguientes casos de uso:
 
 \begin{itemize}
     \item \textbf{HU0: Tribunal del Trabajo de Fin de Grado - } Como tribunal del Trabajo
-    Final de Grado, necesito que este presente una solución bién justificada, cuyos
+    Final de Grado, necesito que esté presente una solución bien justificada, cuyos
     aspectos a valorar son la búsqueda y el tratamiento de la información, la autonomía
     e iniciativa, una planificación clara, la solidez del análisis del problema, una 
     correcta comunicación escrita y una implementación que demuestre calidad técnica,
@@ -78,7 +78,7 @@ iniciales:
 
 \begin{enumerate}
     \item \textbf{Definir una infraestructura técnica adecuada,} estableciendo las herramientas
-    necesarias para el desarollo del sistema.
+    necesarias para el desarrollo del sistema.
     \item \textbf{Diseñar un modelo de representación de la heráldica} que permita clasificar y 
     describir los escudos en función de sus elementos gráficos.
     \item \textbf{Implementar una base de datos} que almacene la información heráldica de manera
