Reformula HU2 closes #16

--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -59,11 +59,9 @@ proyecto, se presentan los siguientes casos de uso:
     y se encuentra con más escudos, lo que le hace pensar en lo oportuna que sería una 
     plataforma que le ayude a identificarlos y obtener información sobre ellos de manera 
     sencilla.
-    \item \textbf{HU2: Investigador en heráldica - } Un investigador necesita clasificar
-    escudos en función de su estructura, colores, figuras, etc. Al no disponer de 
-    herramientas digitales que faciliten el proceso, debe hacerlo manualmente, revisando
-    manuscritos y otros documentos analógicos, tarea tediosa y propensa a errores.
-
+    \item \textbf{HU2: Investigador en heráldica - } Un investigador encuentra tedioso y
+    complicado analizar y revisar escudos en fuentes analógicas, ya que hacerlo manualmente
+    de esta manera lo convierte en un proceso lento y propenso a errores.
 \end{itemize}
 
 \subsection{Objetivos iniciales}
