Reescribe objetivo del proyecto closes #19

--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -43,10 +43,8 @@ Esta situación presenta varias dificultades:
     proceso y puede generar errores.
 \end{itemize}
 
-El objetivo de este proyecto es desarrollar una base de datos estructurada de escudos
-heráldicos junto con herramientas que permitan su consulta y análisis digital. De este
-modo, se busca facilitar la investigación y el aprendizaje de la heráldica mediante un
-sistema accesible y eficiente.
+El objetivo de este proyecto será dar solución a los problemas presentados por los
+clientes en las siguientes historias de usuario:
 
 \subsection{Historias de usuario}
 Con el fin de exponer y comprender mejor las necesidades a las que responde este
