Cambia objetivos iniciales por milestones closes #17

--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -51,47 +51,43 @@ Con el fin de exponer y comprender mejor las necesidades a las que responde este
 proyecto, se presentan los siguientes casos de uso:
 
 \begin{itemize}
-    \item \textbf{HU1: Estudiante de Historia del Arte - } Un estudiante de Historia del 
+    \item \textbf{HU1: Estudiante de Historia del Arte - }Un estudiante de Historia del 
     Arte está paseando por Roma y se encuentra con una obra arquitectónica en cuya fachada
     hay un escudo heráldico. Se pregunta de quién será y qué representa. Sigue caminando 
     y se encuentra con más escudos, lo que le hace pensar en lo oportuna que sería una 
     plataforma que le ayude a identificarlos y obtener información sobre ellos de manera 
     sencilla.
-    \item \textbf{HU2: Investigador en heráldica - } Un investigador encuentra tedioso y
+    \item \textbf{HU2: Investigador en heráldica - }Un investigador encuentra tedioso y
     complicado analizar y revisar escudos en fuentes analógicas, ya que hacerlo manualmente
     de esta manera lo convierte en un proceso lento y propenso a errores.
 \end{itemize}
 
 \subsection{Objetivos iniciales}
-A partir de las anteriores historias de usuario se plantean los siguientes objetivos
-iniciales:
-
+A partir de las anteriores historias de usuario, se pueden establecer el primer
+producto mínimamente viable (o primer milestone):
 \begin{enumerate}
-    \item \textbf{Definir una infraestructura técnica adecuada,} estableciendo las herramientas
-    necesarias para el desarrollo del sistema.
-    \item \textbf{Diseñar un modelo de representación de la heráldica} que permita clasificar y 
-    describir los escudos en función de sus elementos gráficos.
-    \item \textbf{Implementar una base de datos} que almacene la información heráldica de manera
-    organizada, facilitando la consulta y el análisis.
-    \item \textbf{Desarrollar una interfaz de consulta} que permita a los usuarios buscar escudos
-    según sus características.
-    \item \textbf{Elaborar tests} para comprobar el correcto funcionamiento del sistema.
+    \item \textbf{Milestone 1: Modelo del problema - }Este milestone tiene como objetivo
+    crear una base sólida mediante la creación de una representación básica y estructurada
+    de los escudos, lo que permitirá almacenar y organizar sus atributos clave.
 \end{enumerate}
+
+A medida que se avance en este milestone, se establecerá el siguiente paso de manera iterativa,
+ajustándose a los resultados obtenidos y con la finalidad de ofrecer valor continuo al usuario.
 
 \section{Estructura del proyecto}
 Es resto del documento se organiza en los siguientes capítulos:
 
 \begin{itemize}
-    \item \textbf{Capítulo 2: Estado del arte -} Se analizan trabajos previos relacionados
+    \item \textbf{Capítulo 2: Estado del arte - }Se analizan trabajos previos relacionados
     con la digitalización de la heráldica y las herramientas existentes, estableciendo
     el contexto teórico del proyecto.
-    \item \textbf{Capítulo 3: Planificación - } Se explica la planificación y metodología
+    \item \textbf{Capítulo 3: Planificación - }Se explica la planificación y metodología
     que se emplean en el desarrollo. Se habla de los milestones del proyecto.
-    \item \textbf{Capítulo 4: Análisis - } Define qué debe hacer la herramienta y habla
+    \item \textbf{Capítulo 4: Análisis - }Define qué debe hacer la herramienta y habla
     sobre su diseño y arquitectura.
     \item \textbf{Capítulo 5: Implementación - }Describe cómo se ha desarrollado y validado
     la herramienta. 
-    \item \textbf{Capítulo 6: Conclusiones - } Se resumen los resultados obtenidos y se
+    \item \textbf{Capítulo 6: Conclusiones - }Se resumen los resultados obtenidos y se
     discuten posibles mejoras y líneas futuras de investigación.
 \end{itemize}
 
