Reescribe la definición del problema closes #18

--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -12,35 +12,34 @@ un conjunto no arbitrario de reglas de diseño y composición. Estas normas
 establecidas la hacen un campo apropiado para el análisis estructurado y la
 automatización mediante herramientas digitales.
 
-Sin embargo, actualmente el estudio de esta ciencia-arte presenta ciertos 
-obstáculos que dificultan el acceso y la comprensión a quien desea
-introducirse en ella, debido a que su documentación se encuentra dispersa y
-no está completamente digitalizada. Estas barreras complican su aprendizaje,
-aplicación académica y divulgación.
+Sin embargo, quienes desean introducirse en esta disciplina se enfrentan a
+ciertos obstáculos que dificultan su acceso y comprensión a, debido a que su
+documentación se encuentra dispersa y no está completamente digitalizada. Estas 
+barreras complican su aprendizaje, aplicación académica y divulgación.
 
-Con la finalidad de hacer menos hostil el aprendizaje de esta ciencia-arte, este
-proyecto busca desarrollar una herramienta que modernice y agilice el aprendizaje
-de la heráldica, facilitando su comprensión y análisis, aspirando a ofrecer un 
-recurso digital accesible que contribuya a la preservación y divulgación de esta 
-disciplina.
+Con la finalidad de satisfacer las necesidades de este grupo de personas y hacer
+de esa manera menos hostil el aprendizaje de esta ciencia-arte, este proyecto busca 
+desarrollar una herramienta que modernice y agilice el aprendizaje de la heráldica, 
+facilitando su comprensión y análisis, aspirando a ofrecer un recurso digital accesible
+que contribuya a la preservación y divulgación de esta disciplina.
 
 \section{Definición del problema}
-El principal problema que enfrenta el estudio de la heráldica es la falta de una 
-herramienta tecnológica que permita analizar y clasificar escudos de armas de manera 
-eficiente. En la actualidad, la interpretación y el estudio de los escudos heráldicos 
-requieren conocimientos especializados y un acceso a fuentes dispersas, ya que no
-existe un sistema automatizado que permita identificar escudos a partir de
-su estructura o sus elementos gráficos.
+
+La falta de una herramienta tecnológica que permita analizar y clasificar escudos de 
+armas de manera eficiente impide que las personas que estudian o investigan la heráldica
+puedan consultar, clasificar o comparar escudos de forma eficiente, ya que en la actualidad
+se requieren conocimientos especializados y un acceso a fuentes dispersas, muchas de ellas
+no digitalizadas.
 
 Esta situación presenta varias dificultades:
 
 \begin{itemize}
-    \item La consulta de escudos requiere revisar múltiples fuentes dispersas, 
-    muchas de ellas no digitalizadas.
+    \item La consulta de escudos requiere revisar múltiples fuentes no centralizadas, 
+    en su mayoría analógicas.
     \item No existen bases de datos estandarizadas que permitan buscar escudos por
     características visuales o estructurales.
-    \item Los investigadores deben realizar análisis manuales, lo que ralentiza el
-    proceso y puede generar errores.
+    \item El análisis se realiza manualmente, lo que ralentiza el proceso y puede
+    generar errores.
 \end{itemize}
 
 El objetivo de este proyecto será dar solución a los problemas presentados por los
@@ -58,7 +57,7 @@ proyecto, se presentan los siguientes casos de uso:
     plataforma que le ayude a identificarlos y obtener información sobre ellos de manera 
     sencilla.
     \item \textbf{HU2: Investigador en heráldica - }Un investigador encuentra tedioso y
-    complicado analizar y revisar escudos en fuentes analógicas, ya que hacerlo manualmente
+    complicado analizar y comprobar escudos en fuentes analógicas, ya que hacerlo manualmente
     de esta manera lo convierte en un proceso lento y propenso a errores.
 \end{itemize}
 
