--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -43,7 +43,7 @@ Esta situación presenta varias dificultades:
 \end{itemize}
 
 \section{Estructura del proyecto}
-Es resto del documento se organiza en los siguientes capítulos:
+El resto del documento se organiza en los siguientes capítulos:
 
 \begin{itemize}
     \item \textbf{Capítulo 2: Estado del arte - }Se analizan trabajos previos relacionados
