Reescribe motivación enfocada a los clientes closes #23 closes #24

--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -6,24 +6,28 @@ justifican el desarrollo de la solución propuesta, los objetivos iniciales y la
 estructura del documento.
 
 \section{Motivación}
-La heráldica es un sistema de representación gráfica codificado que permite
-la representación visual de linajes, instituciones y territorios a través de
-un conjunto no arbitrario de reglas de diseño y composición. Estas normas
-establecidas la hacen un campo apropiado para el análisis estructurado y la
-automatización mediante herramientas digitales.
+Actualmente, el análisis y la consulta de escudos heráldicos presentan barreras
+prácticas tanto para quienes se encuentran ocasionalmente con ellos como para 
+investigadores especializados. Un estudiante de Historia del Arte, por ejemplo, 
+puede hallar escudos en fachadas de edificios históricos y preguntarse qué representará,
+sin disponer de una herramienta accesible para su búsqueda e identificación. 
+Por otro lado,  un investigador en heráldica debe analizar y clasificar manualmente
+los escudos, ya que los medios actuales son en su mayoría analógicos y dispersos, lo 
+que convierte esto en un proceso lento y propenso a errores.
 
-Sin embargo, quienes desean introducirse en esta disciplina se enfrentan a
-ciertos obstáculos que dificultan su acceso y comprensión a, debido a que su
-documentación se encuentra dispersa y no está completamente digitalizada. Estas 
-barreras complican su aprendizaje, aplicación académica y divulgación.
+Estas situaciones ponen de manifiesto la necesidad de una solución digital que
+facilite el acceso, la consulta y el análisis estructurado de escudos heráldicos. 
+Este proyecto surge con \textbf{el objetivo de responder a dichas necesidades}, planteando 
+una herramienta que permita representar, organizar e interpretar escudos de armas 
+de forma más eficiente, moderna y accesible para todos.
 
 \section{Definición del problema}
 
 La falta de una herramienta tecnológica que permita analizar y clasificar escudos de 
-armas de manera eficiente impide que las personas que estudian o investigan la heráldica
-puedan consultar, clasificar o comparar escudos de forma eficiente, ya que en la actualidad
-se requieren conocimientos especializados y un acceso a fuentes dispersas, muchas de ellas
-no digitalizadas.
+armas de manera eficiente impide que estudiantes o investigadores puedan consultar, 
+clasificar o comparar escudos de forma eficiente, ya que en la actualidad se requieren
+conocimientos especializados y un acceso a fuentes dispersas, muchas de ellas no 
+digitalizadas.
 
 Esta situación presenta varias dificultades:
 
