Arregla typo (redundancia léxica)

--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -25,7 +25,7 @@ de forma más eficiente, moderna y accesible para todos.
 
 La falta de una herramienta tecnológica que permita analizar y clasificar escudos de 
 armas de manera eficiente impide que estudiantes o investigadores puedan consultar, 
-clasificar o comparar escudos de forma eficiente, ya que en la actualidad se requieren
+clasificar o comparar escudos de manera eficiente, ya que en la actualidad se requieren
 conocimientos especializados y un acceso a fuentes dispersas, muchas de ellas no 
 digitalizadas.
 
