--- a/doc/prefacios/prefacio.tex
+++ b/doc/prefacios/prefacio.tex
@@ -34,7 +34,7 @@ Lucía González Sánchez\\
 
 \noindent\rule[-1ex]{\textwidth}{2pt}\\[4.5ex]
 
-D. \textbf{Tutora/e(s)}, Profesor(a) del ...
+D. \textbf{Tutora/e(s)}, Profesor(a) del\dots
 
 \vspace{0.5cm}
 
@@ -48,7 +48,7 @@ que corresponda.
 
 \vspace{0.5cm}
 
-Y para que conste, expiden y firman el presente informe en Granada a Junio de 2018.
+Y para que conste, expiden y firman el presente informe en Granada a \today.
 
 \vspace{1cm}
 
