Arregla errores gramaticales

--- a/doc/secciones/03_planificacion.tex
+++ b/doc/secciones/03_planificacion.tex
@@ -1,6 +1,6 @@
 \chapter{Planificación}
 En esta sección se presenta la planificación del proyecto. Se describen tanto la
-metodología utilizada como las herramientas elegidas para llevar a cabo el desarrollo,
+metodología empleada como las herramientas elegidas para llevar a cabo el desarrollo,
 asegurando la calidad del producto y su entrega continua. Además, se describen las historias
 de usuario que exponen las necesidades que este trabajo deberá satisfacer, así como los
 primeros hitos que se buscará alcanzar.
@@ -12,7 +12,7 @@ En lugar de plantear el desarrollo desde el principio de una manera rígida y de
 se definirán hitos, con tareas y objetivos a corto plazo, con entregas frecuentes
 y revisiones periódicas para poder detectar y corregir errores a tiempo.
 
-Dentro de este enfoque ágil, se utilizará una adaptación de SCRUM como marco
+Dentro de este enfoque ágil, se usará una adaptación de SCRUM como marco
 de trabajo. Esta metodología ágil estructura el trabajo en ciclos cortos (\textit{sprints}),
 de los cuales resultan entregas incrementales del producto. 
 
@@ -20,7 +20,7 @@ Concretamente, cada iteración de este proyecto estará marcada por un hito (\te
 cada uno compuesto por una serie de tareas (\textit{issues}) que se irán completando a lo largo
 del desarrollo.
 
-Al final de cada hito, se realizará una revisión del progreso y se evaluará si cumple con los 
+Al final de cada hito, se realizará una comprobación del progreso y se evaluará si cumple con los 
 objetivos establecidos, y en caso contrario, se ajustarán los requisitos y se planificarán 
 los siguientes hitos.
 
@@ -50,7 +50,7 @@ producto mínimamente viable (o primer milestone):
     en GitHub, la planificación de los hitos y tareas iniciales, y las herramientas para automatizar
     la compilación y corrección ortográfica y gramatical de la memoria.
     \item \textbf{Milestone 1: Modelo del problema - }Este milestone tiene como objetivo
-    crear una base sólida mediante la creación de una representación básica y estructurada
+    elaborar una base sólida mediante la creación de una representación básica y estructurada
     de los escudos, lo que permitirá almacenar y organizar sus atributos clave.
 \end{enumerate}
 
@@ -67,11 +67,11 @@ Implementar un enfoque de entrega continua (CD/CI) permitirá automatizar el pro
 \subsection{Herramientas utilizadas}
 Para dar soporte al flujo de trabajo, se utilizarán las siguientes herramientas:
 \begin{itemize}
-    \item \textbf{Git}: se utilizará como sistema de control de versiones para gestionar el código,
+    \item \textbf{Git}: se empleará como sistema de control de versiones para gestionar el código,
     realizar un seguimiento de los cambios, crear ramas de desarrollo y mantener un historial
     claro y ordenado del proyecto.
     \item \textbf{GitHub}: se utilizará como plataforma centralizada para alojar el repositorio
-    de código, facilitando la gestión de los \textit{issues} y \textit{milestones}, así como la
+    de código, facilitando la gestión de los \textit{issues} y \textit{milestones}, además de la
     configuración de la integración continua (CI/CD) mediante \textit{GitHub Actions.}
 \end{itemize}
 
